[tool.poetry]
name = "PyEnvNoise"
version = "0.1.0"
readme = "README.md"
description = "A package for environmental noise analysis"
authors = [
    "Phuc D. Nguyen <ducphuc.nguyen@flinders.edu.au>",
    "Kristy L. Hansen <kristy.hansen@flinders.edu.au>"
]
maintainers = [
    "Phuc D. Nguyen <ducphuc.nguyen@flinders.edu.au>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numba = ">=0.47"
numpy = ">=1.18.1"
tempita = ">=0.5.2"
scipy = ">=1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.1"
pymdown-extensions = "^7.1"
python-markdown-math = "^0.6"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
